<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HMIAnimation" Id="{22382bf8-2756-4c62-96a4-f4533ab4e637}">
    <Declaration><![CDATA[TYPE ST_HMIAnimation :
STRUCT
(*Here are all the variables needed to animate de HMI Controls.*)

//Level Sensors Animation

//Motors Position Animation
rM1VerticalAnimation	: REAL;
rM2VerticalAnimation	: REAL;

//Valvel Angles and Position Animation

//Pumps Linear and Rotary Animation

//Progress Bar Animation




END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>